--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                 <h2 class="section-title"> What they love </h2>
                 <p>learn more about their experiences</p>
                 <div class="testimonial-card-warp">
+                    <div class="qoute-img">
+                        <img src="images/quote-big.svg" alt="quote-big">
+                    </div> 
                     <div class="grid grid-cols-3">
                         <div class="item">
                             <div class="testimonial-card">
