--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     </header>
     <!-- site-banner start  -->
     <section class="site-banner">
+        <div class="ray-img">
+            <img src="images/banner-ray.svg" alt="banner-ray">
+        </div>
         <div class="container">
             <div class="site-banner-warp">
                 <div class="grid">
@@ -79,6 +82,7 @@
         </div>
      </section>
      <!-- connect end  -->
+     <!-- testimonial start  -->
       <section class="testimonial">
         <div class="container">
             <div class="testimonial-content">
@@ -134,6 +138,7 @@
             </div>
         </div>
       </section>
+      <!-- testimonial end  -->
     <script src="js/gsap.js"></script>
     <script src="js/gsap-scrollTrigger.js"></script>
     <script src="js/custom.js"></script>
