--- a/index.html
+++ b/index.html
@@ -139,6 +139,30 @@
         </div>
       </section>
       <!-- testimonial end  -->
+       <!-- footer start  -->
+       <footer class="site-footer">
+            <div class="container">
+                <div class="footer-content">
+                    <h2>Let’s Start</h2>
+                    <div class="footer-middle">
+                        <p>support@uMedia pro.com</p>
+                        <a href="#">Tell me More</a>
+                        <p><a href="tel:305.614.6348">305.614.6348</a></p>
+                    </div>
+                    <div class="footer-social">
+                        <ul>
+                            <li><a href="#"><i class="ri-facebook-circle-fill"></i></a></li>
+                            <li><a href="#"><i class="ri-instagram-line"></i></a></li>
+                            <li><a href="#"><i class="ri-youtube-fill"></i></a></li>
+                            <li><a href="#"><i class="ri-twitter-fill"></i></a></li>
+                            <li><a href="#"><i class="ri-twitter-fill"></i></a></li>
+                        </ul>
+                        <p>Copyright © 2022 iQSAY.  All rights reserved.</p>
+                    </div>
+                </div>
+            </div>
+       </footer>
+       <!-- footer end  -->
     <script src="js/gsap.js"></script>
     <script src="js/gsap-scrollTrigger.js"></script>
     <script src="js/custom.js"></script>
