--- a/index.html
+++ b/index.html
@@ -145,9 +145,18 @@
                 <div class="footer-content">
                     <h2>Let’s Start</h2>
                     <div class="footer-middle">
-                        <p>support@uMedia pro.com</p>
-                        <a href="#">Tell me More</a>
-                        <p><a href="tel:305.614.6348">305.614.6348</a></p>
+                        <div class="grid grid-cols-3">
+                            <div class="item">
+                                <p>support@uMedia pro.com</p>
+                            </div>
+                            <div class="item">
+                                <a href="#" class="primary-btn">Tell me More</a>
+                            </div>
+                            <div class="item">
+                                <p><a href="tel:305.614.6348">305.614.6348</a></p>
+                            </div>
+                        </div>
+                        
                     </div>
                     <div class="footer-social">
                         <ul>
