--- a/index.html
+++ b/index.html
@@ -53,7 +53,17 @@
                     </div>
                     <div class="item">
                         <div class="banner-img">
-                            <img src="images/banner-sec-img.png" alt="banner-sec-img">
+                            <div class="speaker">
+                                <img src="images/speaker.svg" alt="speaker">
+                                <img src="images/soundwave.gif" alt="soundwave">
+                            </div> 
+                            <figure>
+                                <img src="images/banner-sec-img.png" alt="banner-sec-img">
+                                <div class="rec-asset">
+                                    <img src="images/rec.svg" alt="rec">
+                                    <img src="images/battery.svg" alt="battery">
+                                </div>
+                            </figure>
                         </div>
                     </div>
                 </div>
@@ -139,8 +149,20 @@
         </div>
       </section>
       <!-- testimonial end  -->
+       <section class="faq-sec">
+        <div class="container">
+            <h2 class="section-title">Any doubts</h2>
+            <p class="sub-title">If you can’t find your answer here, feel free reach us</p>
+            <div class="faq-sec-content">
+
+            </div>
+        </div>
+       </section>
        <!-- footer start  -->
        <footer class="site-footer">
+        <div class="dot-shape">
+            <img src="images/dot-shape.svg" alt="dot-shape">
+        </div>
             <div class="container">
                 <div class="footer-content">
                     <h2>Let’s Start</h2>
@@ -150,10 +172,14 @@
                                 <p>support@uMedia pro.com</p>
                             </div>
                             <div class="item">
-                                <a href="#" class="primary-btn">Tell me More</a>
+                                <div class="primary-btn">
+                                    <div class="primary-btn-inner">
+                                        <a href="#">Tell me More</a>
+                                    </div>
+                                </div>
                             </div>
                             <div class="item">
-                                <p><a href="tel:305.614.6348">305.614.6348</a></p>
+                                <p><a href="tel:305.614.6348"> <img src="images/phone-icon.svg" alt="phone-icon">305.614.6348</a></p>
                             </div>
                         </div>
                         
@@ -164,7 +190,7 @@
                             <li><a href="#"><i class="ri-instagram-line"></i></a></li>
                             <li><a href="#"><i class="ri-youtube-fill"></i></a></li>
                             <li><a href="#"><i class="ri-twitter-fill"></i></a></li>
-                            <li><a href="#"><i class="ri-twitter-fill"></i></a></li>
+                            <li><a href="#"><i class="ri-pinterest-fill"></i></a></li>
                         </ul>
                         <p>Copyright © 2022 iQSAY.  All rights reserved.</p>
                     </div>
