faq-shape update

--- a/index.html
+++ b/index.html
@@ -150,11 +150,67 @@
       </section>
       <!-- testimonial end  -->
        <section class="faq-sec">
+        <div class="faq-shape-1">
+            <img src="images/faq-shape-1.svg" alt="faq-shape-1">
+        </div> 
+        <div class="faq-shape-2">
+            <img src="images/faq-shape-2.svg" alt="faq-shape-2">
+        </div> 
         <div class="container">
             <h2 class="section-title">Any doubts</h2>
             <p class="sub-title">If you can’t find your answer here, feel free reach us</p>
             <div class="faq-sec-content">
-
+                <!-- Accordion -->
+			<div class="acc-container">
+				<div class="acc">
+					<div class="acc-head">
+						<h4>Where are you located?</h4>
+					</div>
+					<div class="acc-content">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					</div>
+				</div>
+				<div class="acc">
+					<div class="acc-head">
+						<h4>How do I contact customer service?</h4>
+					</div>
+					<div class="acc-content" style="display: block;">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					</div>
+				</div>
+				<div class="acc">
+					<div class="acc-head">
+						<h4>How do I change or reset my password?</h4>
+					</div>
+					<div class="acc-content">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					</div>
+				</div>
+				<div class="acc">
+					<div class="acc-head">
+						<h4>What is the return policy?</h4>
+					</div>
+					<div class="acc-content">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					</div>
+				</div>
+                <div class="acc">
+					<div class="acc-head">
+						<h4>What do I do if I had an issue with my order?</h4>
+					</div>
+					<div class="acc-content">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					</div>
+				</div>
+                <div class="acc">
+					<div class="acc-head">
+						<h4>How do I change or reset my password?</h4>
+					</div>
+					<div class="acc-content">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					</div>
+				</div>
+			</div>
             </div>
         </div>
        </section>
@@ -198,6 +254,7 @@
             </div>
        </footer>
        <!-- footer end  -->
+    <script src="js/jquery.js"></script>
     <script src="js/gsap.js"></script>
     <script src="js/gsap-scrollTrigger.js"></script>
     <script src="js/custom.js"></script>
