card stack update

--- a/index.html
+++ b/index.html
@@ -72,17 +72,39 @@
     </section>
     <!-- site-banner end  -->
     <!-- stack-cards start -->
-     <!-- <section class="stack-cards">
+     <section class="stack-cards">
         <div class="container">
-            <div class='cards'>
-                <div class='card' style='top:40px'>1</div>
-                <div class='card' style='top:45px'>2</div>
-                <div class='card' style='top:50px'>3</div>
-                <div class='card' style='top:55px'>4</div>
-                <div class='card' style='top:60px'>5</div>
+            <div class="card-wrapper">
+                <div class="cards" style="--quantity:4;">
+                    <div class="card" style="--item:1;">
+                        <span>01</span>
+                        <p>Pre-production 
+                            research, planning 
+                            & scripting</p>
+                        <img src="images/card-1.svg" alt="card-1">
+                    </div>
+                    <div class="card" style="--item:2;">
+                        <span>02</span>
+                        <p>PROFESSIONAL 
+                            video PRODUCTION 
+                            AT YOUR LOCATION</p>
+                        <img src="images/card-2.svg" alt="card-2">
+                    </div>
+                    <div class="card" style="--item:3;">
+                        <span>03</span>
+                        <p>VIDEO-AUDIO 
+                            EDITING</p>
+                        <img src="images/card-3.svg" alt="card-3">
+                    </div>
+                    <div class="card" style="--item:4;">
+                        <span>04</span>
+                        <p>PUBLISHING ON ALL MAJOR SOCIAL MEDIA PLATFORMS DAILY</p>
+                        <img src="images/card-4.svg" alt="card-4">
+                    </div>
+                  </div>
             </div>
         </div>
-     </section> -->
+     </section>
      <!-- stack-cards end  -->
 
      <!-- connect start  -->
@@ -151,7 +173,7 @@
       <!-- testimonial end  -->
        <section class="faq-sec">
         <div class="faq-shape-1">
-            <img src="images/faq-shape-1.svg" alt="faq-shape-1">
+            <img src="images/faq-shape-1.png" alt="faq-shape-1">
         </div> 
         <div class="faq-shape-2">
             <img src="images/faq-shape-2.svg" alt="faq-shape-2">
@@ -160,6 +182,9 @@
             <h2 class="section-title">Any doubts</h2>
             <p class="sub-title">If you can’t find your answer here, feel free reach us</p>
             <div class="faq-sec-content">
+                <div class="cussive-line-shape">
+                    <img src="images/cursive-shape.svg" alt="cursive-shape">
+                </div>
                 <!-- Accordion -->
 			<div class="acc-container">
 				<div class="acc">
