update views sec

--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
         </div>
      </section>
      <!-- stack-cards end  -->
-
      <!-- connect start  -->
      <section class="connect">
         <div class="video-sec">
@@ -114,6 +113,49 @@
         </div>
      </section>
      <!-- connect end  -->
+     <!-- views-sec start  -->
+      <section class="views-sec">
+        <div class="container">
+            <div class="views-sec-wrap">
+                <div class="grid grid-cols-3">
+                    <div class="item">
+                        <div class="views-card">
+                            <div class="top-content">
+                                <h4>2024+</h4>
+                            </div>
+                            <div class="btm-content">
+                                <h6>Number of views</h6>
+                                <span>Generated</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="views-card">
+                            <div class="top-content">
+                                <h4>349+</h4>
+                            </div>
+                            <div class="btm-content">
+                                <h6>Number of views</h6>
+                                <span>uploaded</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="views-card">
+                            <div class="top-content">
+                                <h4>1,541 <sub>hrs</sub></h4>
+                            </div>
+                            <div class="btm-content">
+                                <h6>Total hours</h6>
+                                <h6>shots</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </section>
+      <!-- views-sec end  -->
      <!-- testimonial start  -->
       <section class="testimonial">
         <div class="container">
