update benefit sec

--- a/index.html
+++ b/index.html
@@ -156,7 +156,84 @@
         </div>
       </section>
       <!-- views-sec end  -->
+       <section class="the-diffrences">
+        <div class="container">
+            <h2 class="diff-heading">The Differences</h2>
+            <div class="the-diffrences-wrap">
+                <div class="grid">
+                    <div class="item">
+                        <div class="media-logo">
+                            <img src="images/umediaprologo-2_1bg.gif" alt="umediaprologobg">
+                            <img src="images/arrow-right.svg" alt="arrow-right">
+                            <span>The organic Way</span>
+                        </div>
+                    </div>
+                    <div class="item">
+                       <div class="media-text">
+                        <h3>Traditional Paid Media</h3>
+                       </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+       </section>
      <!-- testimonial start  -->
+      <section class="benefits">
+        <div class="container">
+            <div class="benefits-content">
+                <div class="benefits-list">
+                    <ul class="check-list">
+                        <li>
+                            <div class="check">
+                                <img src="images/check.svg" alt="check">
+                            </div>
+                            <p>Cost stays same exposure grows</p>
+                        </li>
+                        <li>
+                            <div class="check">
+                                <img src="images/check.svg" alt="check">
+                            </div>
+                            <p>Cost stays same exposure grows</p>
+                        </li>
+                        <li>
+                            <div class="check">
+                                <img src="images/check.svg" alt="check">
+                            </div>
+                            <p>Cost stays same exposure grows</p>
+                        </li>
+                        <li>
+                            <div class="check">
+                                <img src="images/check.svg" alt="check">
+                            </div>
+                            <p>Cost stays same exposure grows</p>
+                        </li>
+                    </ul>
+                    <ul class="cross-list">
+                        <li>
+                            <div class="cross">
+                                <img src="images/cross.svg" alt="cross">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="cross">
+                                <img src="images/cross.svg" alt="cross">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="cross">
+                                <img src="images/cross.svg" alt="cross">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="cross">
+                                <img src="images/cross.svg" alt="cross">
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+      </section>
       <section class="testimonial">
         <div class="container">
             <div class="testimonial-content">
