--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="fonts/font.css">
     <link rel="stylesheet" href="css/style.css">
     <title>UmediaPro</title>
 </head>
@@ -156,6 +157,7 @@
         </div>
       </section>
       <!-- views-sec end  -->
+      <!-- the-diffrences start -->
        <section class="the-diffrences">
         <div class="container">
             <h2 class="diff-heading">The Differences</h2>
@@ -177,7 +179,8 @@
             </div>
         </div>
        </section>
-     <!-- testimonial start  -->
+       <!-- the-diffrences end  -->
+     <!-- benefits start  -->
       <section class="benefits">
         <div class="container">
             <div class="benefits-content">
@@ -234,6 +237,8 @@
             </div>
         </div>
       </section>
+      <!-- benefits end  --> 
+      <!-- testimonial start  -->
       <section class="testimonial">
         <div class="container">
             <div class="testimonial-content">
@@ -290,6 +295,7 @@
         </div>
       </section>
       <!-- testimonial end  -->
+      <!-- faq-sec start  -->
        <section class="faq-sec">
         <div class="faq-shape-1">
             <img src="images/faq-shape-1.png" alt="faq-shape-1">
@@ -358,6 +364,33 @@
             </div>
         </div>
        </section>
+       <!-- faq-sec end  -->
+        <section class="just-imagine">
+            <div class="container">
+                <div class="just-imagine-wrap">
+                    <div class="grid grid-cols-2">
+                        <div class="item">
+                            <div class="just-imagine-content">
+                                <h4>JUST IMAGINE</h4>
+                                <h3>HOW FAR YOU CAN GO</h3>
+                                <p>WITH <span>JUST 90 MINUTES</span>A MONTH</p>
+                                <div class="M-clr_btn">
+                                    <div class="M-clr_btn-inner">
+                                        <a href="#">Schedule a phone call</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="timing">
+                                <span class="time">90</span>
+                                <button>Minutes</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
        <!-- footer start  -->
        <footer class="site-footer">
         <div class="dot-shape">
