--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             <img src="images/faq-shape-1.png" alt="faq-shape-1">
         </div> 
         <div class="faq-shape-2">
-            <img src="images/faq-shape-2.svg" alt="faq-shape-2">
+            <img src="images/faq-shape-2.png" alt="faq-shape-2">
         </div> 
         <div class="container">
             <h2 class="section-title">Any doubts</h2>
