--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
     <link rel="stylesheet" href="fonts/font.css">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <title>UmediaPro</title>
@@ -303,14 +304,15 @@
         </div> 
         <div class="faq-shape-2">
             <img src="images/faq-shape-2.png" alt="faq-shape-2">
-        </div> 
+        </div>
+        <div class="cussive-line-shape">
+            <img src="images/cursive-shape.svg" alt="cursive-shape">
+        </div>
         <div class="container">
             <h2 class="section-title">Any doubts</h2>
             <p class="sub-title">If you can’t find your answer here, feel free reach us</p>
             <div class="faq-sec-content">
-                <div class="cussive-line-shape">
-                    <img src="images/cursive-shape.svg" alt="cursive-shape">
-                </div>
+               
                 <!-- Accordion -->
 			<div class="acc-container">
 				<div class="acc">
