--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
                     <div class="item">
                         <div class="views-card">
                             <div class="top-content">
-                                <h4>2024+</h4>
+                                <h4 class="count" data-number="2024">2024</h4>
+                                <span>+</span>
                             </div>
                             <div class="btm-content">
                                 <h6>Number of views</h6>
@@ -135,7 +136,8 @@
                     <div class="item">
                         <div class="views-card">
                             <div class="top-content">
-                                <h4>349+</h4>
+                                <h4 class="count" data-number="349">349</h4>
+                                <span>+</span>
                             </div>
                             <div class="btm-content">
                                 <h6>Number of views</h6>
@@ -145,8 +147,9 @@
                     </div>
                     <div class="item">
                         <div class="views-card">
-                            <div class="top-content">
-                                <h4>1,541 <sub>hrs</sub></h4>
+                            <div class="top-content counter-hour">
+                                <h4 class="count" data-number="1,541">1,541</h4>
+                                <span>hrs</span>
                             </div>
                             <div class="btm-content">
                                 <h6>Total hours</h6>
