--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
                             <figure>
                                 <img src="images/banner-sec-img.png" alt="banner-sec-img">
                                 <div class="rec-asset">
-                                    <img src="images/rec.svg" alt="rec">
-                                    <img src="images/battery.svg" alt="battery">
+                                    <!-- <img src="images/rec.svg" alt="rec">
+                                    <img src="images/battery.svg" alt="battery"> -->
+                                    <img src="images/photo-frame.png" alt="photo-frame">
                                 </div>
                             </figure>
                         </div>
