--- a/index.html
+++ b/index.html
@@ -125,8 +125,17 @@
                     <div class="item">
                         <div class="views-card">
                             <div class="top-content">
-                                <h4 class="count" data-number="2024">2024</h4>
+                                <h4 class="count" data-count="2024">2024</h4>
                                 <span>+</span>
+                                <svg class="animated-line" width="200" height="200" xmlns="http://www.w3.org/2000/svg">
+                                    <defs>
+                                      <linearGradient id="gradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                                        <stop offset="0%" style="stop-color:#AAE291; stop-opacity:1" />
+                                        <stop offset="100%" style="stop-color:#21273C; stop-opacity:1" />
+                                      </linearGradient>
+                                    </defs>
+                                    <path d="M 100 100 m 0 -90 a 90 90 0 1 1 0 180 a 90 90 0 0 1 0 -180" id="line" stroke-linecap="round"></path>
+                                  </svg>
                             </div>
                             <div class="btm-content">
                                 <h6>Number of views</h6>
@@ -137,8 +146,17 @@
                     <div class="item">
                         <div class="views-card">
                             <div class="top-content">
-                                <h4 class="count" data-number="349">349</h4>
+                                <h4 class="count" data-count="349">349</h4>
                                 <span>+</span>
+                                <svg class="animated-line" width="200" height="200" xmlns="http://www.w3.org/2000/svg">
+                                    <defs>
+                                      <linearGradient id="gradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                                        <stop offset="0%" style="stop-color:#AAE291; stop-opacity:1" />
+                                        <stop offset="100%" style="stop-color:#21273C; stop-opacity:1" />
+                                      </linearGradient>
+                                    </defs>
+                                    <path d="M 100 100 m 0 -90 a 90 90 0 1 1 0 180 a 90 90 0 0 1 0 -180" id="line" stroke-linecap="round"></path>
+                                  </svg>
                             </div>
                             <div class="btm-content">
                                 <h6>Number of views</h6>
@@ -149,8 +167,17 @@
                     <div class="item">
                         <div class="views-card">
                             <div class="top-content counter-hour">
-                                <h4 class="count" data-number="1,541">1,541</h4>
+                                <h4 class="count" data-count="1,541">1,541</h4>
                                 <span>hrs</span>
+                                <svg class="animated-line" width="200" height="200" xmlns="http://www.w3.org/2000/svg">
+                                    <defs>
+                                      <linearGradient id="gradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                                        <stop offset="0%" style="stop-color:#AAE291; stop-opacity:1" />
+                                        <stop offset="100%" style="stop-color:#21273C; stop-opacity:1" />
+                                      </linearGradient>
+                                    </defs>
+                                    <path d="M 100 100 m 0 -90 a 90 90 0 1 1 0 180 a 90 90 0 0 1 0 -180" id="line" stroke-linecap="round"></path>
+                                  </svg>
                             </div>
                             <div class="btm-content">
                                 <h6>Total hours</h6>
